tests/rosetta/out/Smalltalk/balanced-ternary.out
/tmp/balanced-ternary.st:5: parse error, expected ']'
